--- a/02-firstapp/package.json
+++ b/02-firstapp/package.json
@@ -16,6 +16,11 @@
   "author": "Jaidev Bangar",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
