--- a/02-firstapp/package.json
+++ b/02-firstapp/package.json
@@ -24,7 +24,6 @@
     "react-dom": "^18.2.0"
   },
   "browserslist": [
-    "last 2 Chrome version",
-    "last 2 Firefox version"
+    "last 2 versions"
   ]
 }
